Fix links on small screens

--- a/src/styling/layout.css
+++ b/src/styling/layout.css
@@ -146,8 +146,7 @@ h1, h2, h3, h4, h5 {
     margin-top: 0;
     margin-bottom: 2rem;
     font-weight: 300;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 0;
 }
 
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem; }
@@ -173,6 +172,10 @@ h5 {
     h3 { font-size: 3.6rem; }
     h4 { font-size: 3.0rem; }
     h5 { font-size: 2.4rem; }
+
+    h1, h2, h3, h4, h5 {
+        padding: 0 10px;
+    }
 }
 
 main {
@@ -203,15 +206,6 @@ footer {
     text-align: center;
 }
 
-.contentLinks {
-    background-color: #14312C;
-    width: 80%;
-    margin: auto;
-    border-radius: 10px;
-    display: flex;
-    justify-content: space-between;
-}
-
 /*
 * Nav bar
 * ––––––––––––––––––––––––––––––––––––––––––––––––––
@@ -226,31 +220,17 @@ nav {
     overflow: hidden;
 }
 
-nav h3, a {
+nav h3 {
     margin: 10px 0;
     text-align: center;
     width: 100%;
     padding: 0;
 }
 
-nav a {
-    font-size: 1.8rem;
-    min-width: fit-content;
-    display: block;
-}
-
 .nav-img {
     max-width: 4em;
     margin-left: 10px;
     display: none;
-}
-
-.links {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin: auto;
-    border-top: 1px solid #AB8D59;
 }
 
 @media (min-width: 550px) {
@@ -267,10 +247,6 @@ nav a {
 }
 
 @media (min-width: 1000px) {
-    nav a {
-        padding-right: 2em;
-    }
-
     nav h3 {
         width: 35%;
         margin: 10px 10px;
@@ -279,13 +255,6 @@ nav a {
 
     .nav-img {
         width: 30%;
-    }
-
-    .links {
-        float: right;
-        margin: 10px 20px 0 0;
-        width: 48%;
-        border: none;
     }
 }
 
